// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Leaderboard > renders heading and empty scores message when no data after loading 1`] = `
<div>
  <div
    class="_container_acb05c"
  >
    <h2
      class="_heading_acb05c"
    >
      Leaderboard
    </h2>
    <p
      class="_status_acb05c"
    >
      No scores recorded.
    </p>
  </div>
</div>
`;

exports[`Leaderboard > renders heading and list on valid leaderboard data 1`] = `
<div>
  <div
    class="_container_acb05c"
  >
    <h2
      class="_heading_acb05c"
    >
      Leaderboard
    </h2>
    <ul
      class="_list_acb05c"
    >
      <li
        class="_item_acb05c"
      >
        <div
          class="_name_acb05c"
        >
          Anon
        </div>
        <div
          class="_score_acb05c"
        >
          32
        </div>
      </li>
      <li
        class="_item_acb05c"
      >
        <div
          class="_name_acb05c"
        >
          Big Gary
        </div>
        <div
          class="_score_acb05c"
        >
          100
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Leaderboard > renders heading and loading message when loading data 1`] = `
<div>
  <div
    class="_container_acb05c"
  >
    <h2
      class="_heading_acb05c"
    >
      Leaderboard
    </h2>
    <p
      class="_status_acb05c"
    >
      Loading...
    </p>
  </div>
</div>
`;
